<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/news"
        android:icon="@drawable/ic_news_50dp"
        android:title="@string/bottom_nuv_item_news"/>
    <item
        android:id="@+id/civil"
        android:icon="@drawable/ic_civil_50dp"
        android:title="@string/bottom_nuv_item_civil"/>
    <item
        android:id="@+id/units"
        android:icon="@drawable/ic_units_50dp"
        android:title="@string/bottom_nuv_item_units"/>
    <item
        android:id="@+id/buildings"
        android:icon="@drawable/ic_building_50dp"
        android:title="@string/bottom_nuv_item_build"/>
    <item
        android:id="@+id/techTree"
        android:icon="@drawable/ic_tech_tree"
        android:title="@string/bottom_nuv_tech_tree"/>
</menu>