<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.unit.UnitFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/unit_logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@android:color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/unit_name_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_orange_dark"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:background="#7b7b7b" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/expansionTV"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/expansion"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/expansion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/expansionTV"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/ageTV"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/ageTV"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/descriptionTV"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/descriptionTV"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/createdInTV"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/createdIn"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/createdIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/createdInTV"
                android:orientation="vertical"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/costTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/cost"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/cost_wood"/>

                <TextView
                    android:id="@+id/costWood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/cost_meat"/>

                <TextView
                    android:id="@+id/costMeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/cost_stone"/>

                <TextView
                    android:id="@+id/costStone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/cost_gold"/>

                <TextView
                    android:id="@+id/costGold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/buildTime"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/buildTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/reloadTime"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/reloadTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/attackDelay"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/attackDelay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/movementRate"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/movementRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/lineOfSight"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/lineOfSight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/hitPoints"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/hitPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/range"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/attack"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/armor"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/armor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/accuracy"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/accuracy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
        </TableRow>

    </LinearLayout>

</ScrollView>