<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.civil.CivilFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/civil_logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@android:color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/civil_name_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_orange_dark"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:background="#7b7b7b" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/expansionTV"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/expansion"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/expansion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/expansionTV"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/armyTypeTV"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/army_type"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/armyType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/armyTypeTV"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/uniqueUnitTV"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/unique_unit"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/uniqueUnitList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/uniqueUnitTV"
                android:orientation="vertical"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/uniqueTechTV"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/unique_tech"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/uniqueTechList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/uniqueTechTV"
                android:orientation="vertical"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_bonus"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/teamBonus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/civilization_bonus"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/civil_bonus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>
